--- a/PmulUnity/Assembly-CSharp.csproj
+++ b/PmulUnity/Assembly-CSharp.csproj
@@ -51,9 +51,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\EnemyHit.cs" />
+     <Compile Include="Assets\AllyGenerator.cs" />
+     <Compile Include="Assets\AllySpawn.cs" />
+     <Compile Include="Assets\Black_Knight_Spawn.cs" />
      <Compile Include="Assets\Scripts\Hit.cs" />
+     <Compile Include="Assets\Scripts\Menu.cs" />
      <Compile Include="Assets\Scripts\Stats.cs" />
+     <Compile Include="Assets\SpawnEnemys.cs" />
+     <Compile Include="Assets\TowerHit.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
