--- a/PmulUnity/Assembly-CSharp.csproj
+++ b/PmulUnity/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\Menu.cs" />
      <Compile Include="Assets\Scripts\Stats.cs" />
      <Compile Include="Assets\TowerHit.cs" />
+     <Compile Include="Assets\UpgradeKnight.cs" />
      <Compile Include="Assets\Waves.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
